--- a/package.json
+++ b/package.json
@@ -24,16 +24,16 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "chai": "^4.1.2",
-    "jsdoc": "^3.5.5",
-    "mocha": "^5.2.0",
     "eslint": "^5.2.0",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.10.0"
+    "eslint-plugin-react": "^7.10.0",
+    "jsdoc": "^3.5.5",
+    "mocha": "^5.2.0",
+    "node-mocks-http": "^1.7.0"
   },
   "dependencies": {
-    "express": "^4.16.3",
-    "supertest": "^3.1.0"
+    "express": "^4.16.3"
   }
 }
