--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "eslint-plugin-react": "^7.10.0",
     "jsdoc": "^3.5.5",
     "mocha": "^5.2.0",
-    "node-mocks-http": "^1.7.0"
+    "node-mocks-http": "^1.7.0",
+    "supertest": "^3.1.0"
   },
   "dependencies": {
     "express": "^4.16.3"
