--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "topcoder-healthcheck-dropin",
-  "version": "1.0.3",
+  "name": "@topcoder-platform/topcoder-healthcheck-dropin",
+  "version": "1.1.0",
   "description": "service health check endpoint drop in",
   "main": "dist/index.js",
   "scripts": {
